# dq-engine

./: .gitignore  README.md  _README.md  bootstrap.sh  pyproject.toml  requirements.txt
config/: TODO.md  _project_config.yaml  project_config.yaml
config/telco_churn/: ANOMALY_CONTEXT.yaml  User_Settings.json  config_snapshot.json  data_contract_snapshot_v1.json  schema.yaml  schema_.ipynb  telco-churn-config.yaml
dbt/dq_engine_dbt/: .env.example  README.md  dbt_project.yml  dq_project.yml  pyproject.toml
dbt/dq_engine_dbt/models/: schema.yml
dbt/dq_engine_dbt/models/marts/: mrt_telco_churn.sql
dbt/dq_engine_dbt/models/staging/: sources.yml  stg_telco.sql
dbt/dq_engine_dbt/profiles/: .user.yml  profiles.yml  profiles.yml.example
dbt/profiles/: .user.yml  profiles.yml
docs/: notes.md
docs/_fixes/: .fix__2025-12-26__113002__Duplicate_Atomic_Write.md  1.3.1_FIXIDs__.md  1.3.1_TypeError_RAW_DATA.md  1.4.1_ValueError_.md  2.0.0.5_PART5_CLOBBERS_PT2_TRUTH.md  2.0.0_122325_PART5_level-isolation.md.md  2.0.3_Logging&Metadata_Setup.md  2.0.7.6.1_Annotate_nodes_with uses_append_sec2.md  2.1.1_ipykernel_error_UserWarning_AutoDetectDataTypes.md  2.1.2__2025-12-24__154135__CustomerID_not_populating.md  2.1.5__2025-12-24__144134__id_cols_not_populated.md  2.1.5__2025-12-24__151912__section2_isolation.md  2.1.5__2025-12-24__163933__sort_protected_column_by_priority.md  2.1.6__2025-12-24__162423__rm_redundant_feature_groups.md  2.1.7_fixCrash_guard_log_section_completion()>use_globals.md  2.1.7_fix_SKIP_STATUS.md  2.1.7_status=WARN.md  2.1.9_Append_fixes.md  2.10.1_(_append_sec2).md  2.10.3_(_append_sec2).md  2.10.3_KeyError_.md  2.10.6_Cat-Num-Relations_ConstantInputWarning.md  2.10.6_Cat-Num-Relations_NameError.md  2.10.6_Cat-Num-Relations_NotImplementedError_.md  2.10.7_BiVaRiaTe_NameError.md  2.11.12_PART_C.md  2.11.2_ValueError_.md  2.2.1_NameError_.md  2.2.1_UserWarning_.md  2.2.2__2026-01-04__111136__DIR_Standardize_outputs.md  2.2.2_def(append_sec2).md  2.2.6_DeprecationWarning_.md  2.2.8_'dict'_obj_hasNO_attribute.md  2.2.8_UserWarning_.md  2.3.18_121125_ADD_reasons_.md  2.3.18_121125_DataDrift&Monitorhooks_baselineprofile_notfound.md  2.3.4_TypeError_appendsec2.md  2.3.7.1_col:as_of_date_not_found.md  2.3.7_121025_NameErr_bucket_df_237.md  2.3.9__2025-12-26__115318__Missing_Rule_confidence_score_.md  (+45 more)
env/: core_lib_versions.json  setup_summary.template.json  setup_summary2.json  telco_setup_summary.json
notebooks/: 01_BOOTSTRAP_INFRA.ipynb  02_DQ_IF.ipynb  02_DQ_MD.ipynb  dq_inference-engine.ipynb  dq_inference-framework.ipynb
tests/: conftest.py
(+1098 files in other folders)
