[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dq_engine"
version = "0.1.0"
description = "Warehouse-native Data Quality Engine with dbt integration"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
  "pandas>=2.1",
  "numpy>=1.26",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
snowflake = [
  "snowflake-connector-python[pandas]>=3.6",
  "cryptography>=41.0",
  "dbt-core>=1.7",
  "dbt-snowflake>=1.7",
]
duckdb = [
  "duckdb>=0.10",
  "dbt-core>=1.7",
  "dbt-duckdb>=1.7",
]

[project.scripts]
dq = "dq_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
